--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yandex-disk",
   "version": "0.1.0",
+  "homepage": "https://vrar29.xyz/testovoe/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
